--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-hello world
+<DOCTYPE! html>
+  <html>
+    <head>
+      <title>Doonan</title>
+    </head>
+    
+    <body>
+      <p>hello world. i did it.</p>
+    </body>
+  </html>
+</DOCTYPE>
