--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     
     <body>
-      <p>hello world. i did it.</p>
+      <p style="font-family: Helvetica">hello world. i did it.</p>
     </body>
   </html>
 </DOCTYPE>
