--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <body>
       <p style="font-family: Helvetica">hello world. i did it.
-        this is where i <strong>plan</strong> on creating a cool website as i learn html, publishing through github pages, and other web stuff.
+        <br>this is where i <strong>plan</strong> on creating a cool website as i learn html, publishing through github pages, and other web stuff.
       </p>
     </body>
   </html>
