--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <title>Doonan</title>
     </head>
     
-    <body>
+    <body style="background: #A3CCCC">
       <p style="font-family: Helvetica">hello world. i did it.
         <br>this is where i <strong>plan</strong> on creating a cool website as i learn html, publishing through github pages, and other web stuff.
       </p>
