--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
-<DOCTYPE! html>
-  <html>
-    <head>
-      <title>Doonan</title>
-    </head>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Doonan</title>
+  </head>
     
-    <body style="background: #A3CCCC">
-      <p style="font-family: Helvetica">hello world. i did it.
-        <br>this is where i <strong>plan</strong> on creating a cool website as i learn html, publishing through github pages, and other web stuff.
-      </p>
-    </body>
-  </html>
-</DOCTYPE>
+  <body style="background: #A3CCCC">
+    <p style="font-family: Helvetica">hello world. i did it.
+      <br>this is where i <strong>plan</strong> on creating a cool website as i learn html, publishing through github pages, and other web stuff.
+    </p>
+  </body>
+</html>
