Prepare for CSS sheet

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
     <title>Doonan</title>
   </head>
     
-  <body style="background: #A3CCCC">
-    <p style="font-family: Helvetica">hello world. i did it.
+  <body>
+    <p>hello world. i did it.
       <br>this is where i <strong>plan</strong> on creating a cool website as i learn html, publishing through github pages, and other web stuff.
     </p>
   </body>
