--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <p>hello world. i did it.
       <br>this is where i <strong>plan</strong> on creating a cool website as i learn html, publishing through github pages, and other web stuff.
-      <br><br><a href="https://www.github.com/Doonan"><div>My Github</div></a>
+      <br><br><a href="https://www.github.com/Doonan"><div>my github</div></a>
     </p>
   </body>
 </html>
