--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
-    <title>Doonan</title>
+    <title>doonan :)</title>
   </head>
     
   <body>
