Add gitbutton class to css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <p>hello world. i did it.
       <br>this is where i <strong>plan</strong> on creating a cool website as i learn html, publishing through github pages, and other web stuff.
       <br>i owe too much of my learning to <a href="http://www.codecademy.com/learn">codecademy</a>. those gals and guys are some of the best around.
-      <br><br><a href="https://www.github.com/Doonan"><div class="gitbutton" href="https://www.github.com/Doonan">my github</div></a>
+      <br><br><a href="https://www.github.com/Doonan"><div class="gitbutton">my github</div></a>
     </p>
   </body>
 </html>
