--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
       
       <br><br><div class="gitbutton button" onclick="location.href='https://www.github.com/Doonan';" style="cursor: pointer;">my github</div><br><br>
     </p>
+    <p>currently, i am dabbling in these thingies:
+      <ul>
+        <li>html</li>
+        <li>java & javaswing</li>
+        <li>laravel</li>
+        <li>c & c++</li>
+        <li>smlnj</li>
+      </ul>
+    </p>
 
     <footer>
       <p>site by justin doonan. <a href="mailto:jdoonan44@gmail.com">email me</a>.</p>
