--- a/index.html
+++ b/index.html
@@ -31,13 +31,26 @@
       
       <br><br><div class="gitbutton button" onclick="location.href='https://www.github.com/Doonan';" style="cursor: pointer;">my github</div><br><br>
     </p>
-    <p>currently, i am dabbling in these thingies:
+    <p>
       <ul>
+      currently, i am dabbling in these thingies:
         <li>html</li>
         <li>java & javaswing</li>
         <li>laravel</li>
         <li>c & c++</li>
         <li>smlnj</li>
+        <li>sql</li>
+        <li>android development</li>
+      </ul>
+      <ul>and i intend to do some dabbling in these other thingies:
+        <li>javascript</li>
+        <li>jquery</li>
+        <li>php, as a stand-alone</li>
+        <li>rust</li>
+        <li>clojure</li>
+        <li>unity development</li>
+        <li>bash scripting</li>
+        <li>python</li>
       </ul>
     </p>
 
