--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
       <br>i owe too much of my learning to <a href="http://www.codecademy.com/learn">codecademy</a>. those gals and guys are some of the best around.
       
       <br><br><div class="gitbutton button" onclick="location.href='https://www.github.com/Doonan';" style="cursor: pointer;">my github</div><br><br>
-    </p>
-    <p>
+        
+      currently, i am dabbling in these thingies:  
       <ul>
-      currently, i am dabbling in these thingies:
         <li>html</li>
         <li>java & javaswing</li>
         <li>laravel</li>
@@ -42,7 +41,8 @@
         <li>sql</li>
         <li>android development</li>
       </ul>
-      <ul>and i intend to do some dabbling in these other thingies:
+      and i intend to do some dabbling in these other thingies:
+      <ul>
         <li>javascript</li>
         <li>jquery</li>
         <li>php, as a stand-alone</li>
