--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
       
       <br><br><div class="gitbutton button" onclick="location.href='https://www.github.com/Doonan';" style="cursor: pointer;">my github</div><br><br>
         
-      currently, i am dabbling in these thingies:  
-      <ul>
+      <ul data-header="currently, i am dabbling in these thingies:">
         <li>html</li>
         <li>java & javaswing</li>
         <li>laravel</li>
@@ -41,8 +40,7 @@
         <li>sql</li>
         <li>android development</li>
       </ul>
-      and i intend to do some dabbling in these other thingies:
-      <ul>
+      <ul data-header="and i intend to do some dabbling in these other thingies:">
         <li>javascript</li>
         <li>jquery</li>
         <li>php, as a stand-alone</li>
