--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <li>unity development</li>
         <li>bash scripting</li>
         <li>python</li>
+        <li>bootstrap stuff</li>
       </ul>
     </p>
 
