--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       
       <br><br><div class="gitbutton button" onclick="location.href='https://www.github.com/Doonan';" style="cursor: pointer;">my github</div>
 
-      <ul data-header="currently, i am dabbling in these thingies:">
+      <br><ul data-header="currently, i am dabbling in these thingies:">
         <li>html</li>
         <li>java & javaswing</li>
         <li>laravel</li>
