--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       
       <br>i owe too much of my learning to <a href="http://www.codecademy.com/learn">codecademy</a>. those gals and guys are some of the best around.
 
-      <br><ul data-header="currently, i am dabbling in these thingies:">
+      <br><br><ul data-header="currently, i am dabbling in these thingies:">
         <li>html</li>
         <li>java & javaswing</li>
         <li>laravel</li>
