Add title to resume

--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,7 @@
 		<meta name="msapplication-TileImage" content="assets/favicon/ms-icon-144x144.png">
 		<meta name="theme-color" content="#ffffff">
 		<link type="text/css" rel="stylesheet" href="css/resumestyle.css"/>
-		<title></title>
+		<title>doonan's resume</title>
 	</head>
 	<body>
 	    <div id="header"><h2 class="title">Justin Doonan</h2><h2 class="name">doonan.me</h2></div>
