--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </p>
 
     <footer>
-      <p>site by justin doonan. <a href="mailto:jdoonan44@gmail.com">email me</a>. check out my <a href="http://www.doonan.me/resume>resume</a>.</p>
+      <p>site by justin doonan. <a href="mailto:jdoonan44@gmail.com">email me</a>. check out my <a href="http://www.doonan.me/resume">resume</a>.</p>
     </footer>
   </body>
 </html>
