Work on the footer

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
       <br><br><div class="gitbutton button" onclick="location.href='https://www.github.com/Doonan';" style="cursor: pointer;">my github</div>
     </p>
 
-    <footer>
+    <div class="foot">
       <p>site by justin doonan. <a href="mailto:jdoonan44@gmail.com">email me</a>. check out my <a href="http://www.doonan.me/resume">resume</a>.</p>
-    </footer>
+    </div>
   </body>
 </html>
