--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         <li>bootstrap stuff</li>
       </ul>
       
-      <br><br><div class="gitbutton button" onclick="location.href='https://www.github.com/Doonan';" style="cursor: pointer;">my github</div>
+      <br><br><div class="gitbutton button" onclick="location.href='https://www.github.com/Doonan';">my github</div>
     </p>
 
-    <div class="foot">
+    <footer>
       <p>site by justin doonan. <a href="mailto:jdoonan44@gmail.com">email me</a>. check out my <a href="http://www.doonan.me/resume">resume</a>.</p>
-    </div>
+    </footer>
   </body>
 </html>
