Fix links in footer

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
       </div>
     </div>
 
-    <footer>
+    <div class="foot">
       <p>site by justin doonan. <a href="mailto:jdoonan44@gmail.com">email me</a>. check out my <a href="http://www.doonan.me/resume">resume</a>.</p>
-    </footer>
+    </div>
   </body>
 </html>
