--- a/index.html
+++ b/index.html
@@ -34,15 +34,16 @@
         <li>html</li>
         <li>java & javaswing</li>
         <li>laravel</li>
-        <li>c & c++</li>
+        <li>c/c++</li>
         <li>smlnj</li>
-        <li>sql</li>
+        <li>prolog</li>
+        <li>sql in mysql and postgresql</li>
         <li>android development</li>
       </ul><br>
       <ul data-header="and i intend to do some dabbling in these other thingies:">
         <li>javascript</li>
         <li>jquery</li>
-        <li>php, as a stand-alone</li>
+        <li>php</li>
         <li>rust</li>
         <li>clojure</li>
         <li>unity development</li>
