--- a/resume.html
+++ b/resume.html
@@ -24,32 +24,34 @@
   </head>
     <body>
       <div id="header"><h2 class="title">Justin Doonan</h2><h2 class="name">doonan.me</h2></div>
-      <div class="left">
-      </div>
-      <div class="right">
-      <div class="stuff">
-        <h4>Objective</h4>
-        <p>To get a nice job at your company with less than normal work for less than normal pay.</p>
-        <h4>Experience</h4>
-        <ul>
-          <li>Designed and signed Android apps</li>
-          <li>Created software according to customer specifications throughout coursework</li>
-          <li>Worked for a start-up software company</li>
-        </ul>
-        <h4>Skills</h4>
-        <ul>
-          <li>Languages: Java, C/C++, HTML/CSS, Ruby, PHP, SQL</li>
-          <li>Frameworks: Ruby on Rails, Laravel, Node.js</li>
-          <li>Able to collaborate via Github</li>
-          <li>Able to configure databases in MySQL</li>
-        </ul>
-        <h4>Education</h4>
-        <p>Class of University of Memphis 2015, B.S. in Computer Science</p>
-        <ul>
-          <li>Dean's List 5 semesters</li>
-          <li>Honors student </li>
-          <li>GPA always greater than 3.5</li>
-        </ul>
+      <div id=holder>
+        <div class="left">
+        </div>
+        <div class="right">
+        <div class="stuff">
+          <h4>Objective</h4>
+          <p>To get a nice job at your company with less than normal work for less than normal pay.</p>
+          <h4>Experience</h4>
+          <ul>
+            <li>Designed and signed Android apps</li>
+            <li>Created software according to customer specifications throughout coursework</li>
+            <li>Worked for a start-up software company</li>
+          </ul>
+          <h4>Skills</h4>
+          <ul>
+            <li>Languages: Java, C/C++, HTML/CSS, Ruby, PHP, SQL</li>
+            <li>Frameworks: Ruby on Rails, Laravel, Node.js</li>
+            <li>Able to collaborate via Github</li>
+            <li>Able to configure databases in MySQL</li>
+          </ul>
+          <h4>Education</h4>
+          <p>Class of University of Memphis 2015, B.S. in Computer Science</p>
+          <ul>
+            <li>Dean's List 5 semesters</li>
+            <li>Honors student </li>
+            <li>GPA always greater than 3.5</li>
+          </ul>
+        </div>
       </div>
     </div>
     <div id="footer"><p>Memphis, TN | Tel: (901)-679-6582 | <a href="mailto:jdoonan44@gmail.com" target="_top">jdoonan44@gmail.com</a> | <a href="http://www.doonan.me" target="_top">doonan.me</a> </p></div>
