--- a/resume.html
+++ b/resume.html
@@ -31,25 +31,28 @@
           <div class="right">
           <div class="stuff">
             <h4>Objective</h4>
-            <p>To get a nice job at your company with less than normal work for less than normal pay.</p>
+            <p>To find a job where I not only fit in but feel satisfied with the type of work I do.</p>
+            <p>To better myself as a person, a programmer, and a computer scientist.</p>
             <h4>Experience</h4>
             <ul>
-              <li>Contributed to the design and signing of 2 Android apps</li>
-              <li>Created software according to customer or professor specifications throughout coursework</li>
-              <li>Worked for a start-up software company</li>
+              <li>Contributed to the design and signing of 2 separate Android apps, one of which is on the Google Play Store.</li>
+              <li>Created software according to customer or professor specifications throughout my coursework.</li>
+              <li>Worked for a start-up software company during my last college semester.</li>
+              <li>6 months of job experience working at a self-serve TCBY yogurt shop.</li>
             </ul>
             <h4>Skills</h4>
             <ul>
-              <li>Languages: Java, C/C++, HTML/CSS, Ruby, PHP, SQL</li>
-              <li>Frameworks: Ruby on Rails, Laravel, Node.js</li>
+              <li>Familiar Languages: Java, C/C++, HTML & CSS, Ruby, PHP, SQL, JavaScript</li>
+              <li>Familiar Frameworks: Ruby on Rails, Laravel, Node.js</li>
               <li>Able to collaborate via Github</li>
               <li>Able to configure databases in MySQL</li>
+              <li>Able to learn from my mistakes</li>
             </ul>
             <h4>Education</h4>
             <p>Class of University of Memphis 2015, B.S. in Computer Science</p>
             <ul>
               <li>Dean's List 5 semesters</li>
-              <li>Honors student </li>
+              <li>University Honor's student</li>
               <li>GPA always greater than 3.5</li>
             </ul>
           </div>
