--- a/resume.html
+++ b/resume.html
@@ -31,8 +31,8 @@
           <div class="right">
           <div class="stuff">
             <h4>Objective</h4>
-            <p>To find a job where I not only fit in but feel satisfied with the type of work I do.</p>
-            <p>To better myself as a person, a programmer, and a computer scientist.</p>
+            <p>To find a job where I not only fit in but feel satisfied with the type of work I do.<br>
+            To better myself as a person, a programmer, and a computer scientist.</p>
             <h4>Experience</h4>
             <ul>
               <li>Contributed to the design and signing of 2 separate Android apps, one of which is on the Google Play Store.</li>
