attempt to use the new resume

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
 
     <div class="foot">
-      <p>site by justin doonan. <a href="mailto:jdoonan44@gmail.com">email me</a>. check out my <a href="http://www.doonan.me/resume">resume</a>.</p>
+      <p>site by justin doonan. <a href="mailto:jdoonan44@gmail.com">email me</a>. check out my <a href="http://www.doonan.me/resume.pdf">resume</a>.</p>
     </div>
   </body>
 </html>
